Upstream sequences ready, Promotech ready to run

--- a/Scripts_Prodigal/trimm_upstream_sequences.ipynb
+++ b/Scripts_Prodigal/trimm_upstream_sequences.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,40 +27,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "541\n"
+      "7471\n"
      ]
     }
    ],
    "source": [
     "# Read the fasta file\n",
-    "# fasta = '/mnt/mnemo5/eugenio/IroN_project/Files/05_Upstream_seqs/1_iroN_enterobacteriaceae_upstream.fa'\n",
-    "# fasta = '/mnt/mnemo5/eugenio/IroN_project/Files/05_Upstream_seqs/1_iroN_salmonella_upstream.fa'\n",
-    "fasta = '/mnt/mnemo5/eugenio/IroN_project/Files/XX_Try_800_bp/upstream.fa'\n",
+    "# fasta = '/mnt/mnemo5/eugenio/IroN_project/Files/05_Upstream_seqs/05_enterobacteriaceae_upstream_sequences.fa'\n",
+    "fasta = '/mnt/mnemo5/eugenio/IroN_project/Files/05_Upstream_seqs/05_salmonella_upstream_sequences.fa'\n",
+    "\n",
     "sequences = read_fasta_file(fasta)\n",
     "print(len(sequences))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of sequences: 541\n",
-      "Number of sequences with >= 40 bp: 407\n",
-      "Number of sequences with < 40 bp: 134\n",
-      "Percentage of sequences with >= 40 bp: 75.23%\n",
-      "Number of sequences in the final cut: 407\n"
+      "Total number of sequences: 7471\n",
+      "Number of sequences with >= 40 bp: 3311\n",
+      "Number of sequences with < 40 bp: 4160\n",
+      "Percentage of sequences with >= 40 bp: 44.32%\n",
+      "Number of sequences in the final cut: 3311\n"
      ]
     }
    ],
@@ -90,6 +90,20 @@
     "print(f'Number of sequences with < 40 bp: {removed}')\n",
     "print(f'Percentage of sequences with >= 40 bp: {percentage:.2f}%')\n",
     "print(f\"Number of sequences in the final cut: {len(sequences)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#out = '/mnt/mnemo5/eugenio/IroN_project/Files/05_Upstream_seqs/5_enterobacteriaceae_upstream_sequences_40bp.fa'\n",
+    "out = '/mnt/mnemo5/eugenio/IroN_project/Files/05_Upstream_seqs/5_salmonella_upstream_sequences_40bp.fa'\n",
+    "\n",
+    "with open(out, 'w') as f:\n",
+    "    for key, value in sequences.items():\n",
+    "        f.write(f\">{key}\\n{value}\\n\")"
    ]
   }
  ],
