Escherichia results obtained

--- a/3_&_5_Prodigal/trimm_upstream_sequences.ipynb
+++ b/3_&_5_Prodigal/trimm_upstream_sequences.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,27 +21,26 @@
     "import sys\n",
     "\n",
     "# Functions made by Nico\n",
-    "sys.path.append('/mnt/mnemo5/eugenio/IroN_project/Scripts/IroN-project/Scripts_BlastN/')\n",
+    "sys.path.append('/mnt/mnemo5/eugenio/IroN_project/Scripts/IroN-project/2_BlastN/')\n",
     "from extract_sequence import read_fasta_file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2739\n"
+      "549\n"
      ]
     }
    ],
    "source": [
     "# Read the fasta file\n",
-    "# fasta = '/mnt/mnemo5/eugenio/IroN_project/Files/05_Upstream_seqs/05_enterobacteriaceae_upstream_sequences.fa'\n",
-    "fasta = '/mnt/mnemo5/eugenio/IroN_project/Files/05_Upstream_seqs/salmonella_upstream_seqs_300_bp.fa'\n",
+    "fasta = '/mnt/mnemo5/eugenio/IroN_project/Files/04_Blast_annotations/enterobacteriaceae_all_blast_hists.fa'\n",
     "\n",
     "sequences = read_fasta_file(fasta)\n",
     "print(len(sequences))"
@@ -49,18 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of sequences: 2739\n",
-      "Number of sequences with >= 40 bp: 2739\n",
-      "Number of sequences with < 40 bp: 0\n",
-      "Percentage of sequences with >= 40 bp: 100.00%\n",
-      "Number of sequences in the final cut: 2739\n"
+      "Total number of sequences: 549\n",
+      "Number of sequences with >= 40 bp: 283\n",
+      "Number of sequences with < 40 bp: 266\n",
+      "Percentage of sequences with >= 40 bp: 51.55%\n",
+      "Number of sequences in the final cut: 283\n"
      ]
     }
    ],
@@ -94,15 +93,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "#out = '/mnt/mnemo5/eugenio/IroN_project/Files/05_Upstream_seqs/5_enterobacteriaceae_upstream_sequences_40bp.fa'\n",
-    "out = '/mnt/mnemo5/eugenio/IroN_project/Files/05_Upstream_seqs/salmonella_upstream_seqs_300_bp_trimmed.fa'\n",
+    "out = '/mnt/mnemo5/eugenio/IroN_project/Files/10_Escherichia/IroN_seqs_300_bp_trimmed_Escherichia.fa'\n",
     "\n",
     "with open(out, 'w') as f:\n",
     "    for key, value in sequences.items():\n",
+    "        f.write(f\">{key}\\n{value}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "262\n",
+      "266\n"
+     ]
+    }
+   ],
+   "source": [
+    "#### So I missed some iroN sequences due to a mistake in the script, I'm going to add them manually ####\n",
+    "\n",
+    "# Read the fasta file obtained through the corrected script\n",
+    "fasta = '/mnt/mnemo5/eugenio/IroN_project/Files/04_Blast_annotations/enterobacteriaceae_w_minus.fa'\n",
+    "allSequences = read_fasta_file(fasta)\n",
+    "\n",
+    "minusSequences = {}\n",
+    "for seq_name, seq in allSequences.items():\n",
+    "    if seq_name in removedSeqs:\n",
+    "        minusSequences[seq_name] = seq\n",
+    "print(len(minusSequences))\n",
+    "print(len(removedSeqs))\n",
+    "\n",
+    "# Let's save this result\n",
+    "out = '/mnt/mnemo5/eugenio/IroN_project/Files/04_Blast_annotations/enterobacteriaceae_minus_400.fa'\n",
+    "with open(out, 'w') as f:\n",
+    "    for key, value in minusSequences.items():\n",
     "        f.write(f\">{key}\\n{value}\\n\")"
    ]
   }
