Corrected mistakes (added - seqs and filtered them)

--- a/3_&_5_Prodigal/trimm_upstream_sequences.ipynb
+++ b/3_&_5_Prodigal/trimm_upstream_sequences.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,20 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "549\n"
+      "2038\n"
      ]
     }
    ],
    "source": [
     "# Read the fasta file\n",
-    "fasta = '/mnt/mnemo5/eugenio/IroN_project/Files/04_Blast_annotations/enterobacteriaceae_all_blast_hists.fa'\n",
+    "fasta = '/mnt/mnemo5/eugenio/IroN_project/Files/10_Escherichia/upstream_300_bp_escherichia.fa'\n",
     "\n",
     "sequences = read_fasta_file(fasta)\n",
     "print(len(sequences))"
@@ -48,18 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of sequences: 549\n",
-      "Number of sequences with >= 40 bp: 283\n",
-      "Number of sequences with < 40 bp: 266\n",
-      "Percentage of sequences with >= 40 bp: 51.55%\n",
-      "Number of sequences in the final cut: 283\n"
+      "Total number of sequences: 2038\n",
+      "Number of sequences with >= 40 bp: 1922\n",
+      "Number of sequences with < 40 bp: 116\n",
+      "Percentage of sequences with >= 40 bp: 94.31%\n",
+      "Number of sequences in the final cut: 1922\n"
      ]
     }
    ],
@@ -93,12 +93,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "#out = '/mnt/mnemo5/eugenio/IroN_project/Files/05_Upstream_seqs/5_enterobacteriaceae_upstream_sequences_40bp.fa'\n",
-    "out = '/mnt/mnemo5/eugenio/IroN_project/Files/10_Escherichia/IroN_seqs_300_bp_trimmed_Escherichia.fa'\n",
+    "out = '/mnt/mnemo5/eugenio/IroN_project/Files/10_Escherichia/upstream_300_bp_escherichia.trimmed.fa'\n",
     "\n",
     "with open(out, 'w') as f:\n",
     "    for key, value in sequences.items():\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
