Made figures for the next reviewed version

--- a/Double_checking/filtering_blast_results.ipynb
+++ b/Double_checking/filtering_blast_results.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,9 +455,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['siderophore salmochelin receptor IroN '\n",
+      " 'catecholate siderophore esterase IroE ' 'hypothetical protein, partial '\n",
+      " 'MULTISPECIES: siderophore salmochelin receptor IroN '\n",
+      " 'IS630 family transposase '\n",
+      " 'MULTISPECIES: siderophore enterobactin receptor FepA '\n",
+      " 'hypothetical protein RCEC007_1000001 '\n",
+      " 'MULTISPECIES: transposase domain-containing protein, partial '\n",
+      " 'alpha/beta hydrolase ' 'transposase '\n",
+      " 'TonB-dependent receptor, partial ' 'hypothetical protein G854_00899 '\n",
+      " 'iroE protein ' 'Ferrienterobactin receptor, partial '\n",
+      " 'siderophore salmochelin receptor IroN, partial ' 'hypothetical protein '\n",
+      " 'siderophore enterobactin receptor FepA '\n",
+      " 'TonB-dependent receptor plug domain-containing protein '\n",
+      " 'tonB dependent receptor family protein '\n",
+      " 'helix-turn-helix domain-containing protein, partial '\n",
+      " 'TonB-dependent siderophore receptor '\n",
+      " 'TonB-dependent siderophore receptor,IroN protein '\n",
+      " 'outer membrane receptor protein ' 'outer membrane receptor FepA '\n",
+      " 'MULTISPECIES: IS3 family transposase, partial '\n",
+      " 'siderophore enterobactin receptor FepA, partial '\n",
+      " 'MULTISPECIES: catecholate siderophore esterase IroE '\n",
+      " 'transposase, partial '\n",
+      " 'hypothetical protein CFSAN002237_19600, partial '\n",
+      " 'ferrienterobactin outer membrane transporter '\n",
+      " 'tonB dependent receptor family protein, partial '\n",
+      " 'hypothetical protein G736_01038 ' 'TonB-dependent receptor '\n",
+      " 'hypothetical protein AML59_15950 ' 'IroN '\n",
+      " 'helix-turn-helix domain-containing protein '\n",
+      " 'Salmochelin siderophore protein IroE ' 'ferrienterobactin receptor '\n",
+      " 'IS630-like element ISEc40 family transposase '\n",
+      " 'hypothetical protein WIM_02197, partial '\n",
+      " 'tonB-dependent outer membrane siderophore receptor domain protein '\n",
+      " 'fimbrial biogenesis outer membrane usher protein '\n",
+      " 'TonB-dependent receptor plug domain-containing protein, partial '\n",
+      " 'hypothetical protein A13I_04076, partial '\n",
+      " 'hypothetical protein AI3007V1_5266, partial '\n",
+      " 'IS200/IS605 family transposase ' 'IS3 family transposase '\n",
+      " 'helix-turn-helix domain protein '\n",
+      " 'catecholate siderophore esterase IroE, partial ']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n'siderophore salmochelin receptor IroN '\\n'MULTISPECIES: siderophore salmochelin receptor IroN '\\n'TonB-dependent receptor, partial '\\n'siderophore salmochelin receptor IroN, partial '\\n'TonB-dependent siderophore receptor,IroN protein '\\n'TonB-dependent siderophore receptor '\\n'IroN '\\n'tonB-dependent outer membrane siderophore receptor domain protein '\\n'TonB-dependent receptor plug domain-containing protein, partial '\\n\""
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#### Here I read the results of the Blast ####\n",
     "\n",
@@ -599,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
